# lib-sim800l-sms

./: .gitignore  CMakeLists.txt  README.md  SIM800L.cpp  SIM800L.h  SMSMessage.cpp  SMSMessage.h  ScanUtil.cpp  ScanUtil.h  library.properties  main_test.cpp  scan_util.cpp  scan_util.h  sendReceiveSMS.cpp
.github/workflows/: codeql.yml  flawfinder.yml
examples/: main.cpp
src/: SIM800L.cpp  SIM800L.h  SMSMessage.cpp  SMSMessage.h  ScanUtil.h
tests/: CMakeLists.txt  main_test.cpp
